# scx-loader

./: Cargo.toml  README.md
.github/workflows/: ci.yml
configs/: org.scx.Loader.conf  org.scx.Loader.xml
crates/scx_loader/: Cargo.toml  README.md  configuration.md  default_config.toml
crates/scx_loader/src/: config.rs  dbus.rs  lib.rs  main.rs
crates/scxctl/: Cargo.toml  README.md
crates/scxctl/src/: cli.rs  main.rs
crates/scxtui/: Cargo.toml  README.md
crates/scxtui/src/: app.rs  kernel.rs  logs.rs  main.rs  ui.rs
crates/scxtui/src/backend/: loader.rs  mod.rs  service.rs
services/: scx_loader.service
xtask/: Cargo.toml
xtask/src/: main.rs
