[[bin]]
name = "scxctl"

[package]
name = "scxctl"
version = "1.0.19"
edition = "2021"
description = "A cli dbus client for scx_loader"
authors = ["Joe Maples <joe@maples.dev>"]
repository = "https://github.com/sched-ext/scx-loader"
readme = "README.md"
keywords = ["linux", "scx", "scx_scheds", "scx_loader", "sched_ext"]
categories = ["command-line-utilities"]
license = "GPL-2.0-only"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
zbus = "5.12.0"
scx_loader = { path = "../scx_loader", version="1.0.19" }
